# backend

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  test_import.py
alembic/: env.py
alembic/versions/: 46ce72611622_add_stars_range_constraint.py  63e058ed3fba_improve_rating_constraints.py  a5e72ae7bac1_initial_tables.py
app/: main.py
app/core/: auth.py  config.py  db.py  security.py
app/models/: __init__.py  conversation.py  conversation_read.py  message.py  post.py  rating.py  transaction.py  university.py  user.py
app/routers/: auth.py  chat.py  location.py  posts.py  ratings.py  transactions.py  users.py
app/schemas/: chat.py  post.py  user.py
app/services/: location_service.py
campus_marketplace_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: seed_universities.py  setup.sql  universities.csv
